cpp-workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:33:23 **** Incremental Build of configuration Debug for project O2C-2017-Winno ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Roaring Robotics/wpilib/cpp/current/include" "-IC:\\Users\\Roaring Robotics\\Documents\\GitHub\\Roaring-Robotics-O2C-\\cpp-workspace\\O2C-2017-Winno\\src" "-IC:\\Users\\Roaring Robotics/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Main.o" "..\\src\\Main.cpp" 
In file included from ..\src\ModuleLoader.h:13:0,
                 from ..\src\Robot.h:190,
                 from ..\src\Main.cpp:14:
..\src\modules/DriveTrain.h: In static member function 'static void DriveTrain::drive(double, double, double, bool)':
..\src\modules/DriveTrain.h:113:26: error: 'AutonomousPrivate' has not been declared
     autoStates.push_back(AutonomousPrivate::autoTimer);
                          ^
